# ncs-fund

./: .gitignore  Dockerfile  README.md
.github/workflows/: all.yml  all_ncs_fund.yml  c-cpp.yml  lesson2.yml  lesson3.yml  lesson4.yml  lesson5.yml  lesson6.yml  lesson7.yml  lesson8.yml  main.yml  test_all
l2/l2_e1/: sample.yaml
l2/l2_e1_sol/: sample.yaml
l2/l2_e2/: sample.yaml
l2/l2_e2/src/: main.c
l2/l2_e2_sol/: sample.yaml
l3/l3_e1_sol/: sample.yaml
l3/l3_e2_sol/: prj.conf  sample.yaml
l3/l3_e2_sol/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay  nrf9151dk_nrf9151_ns.overlay
l3/l3_e2_sol/src/: main.c
l4/l4_e1/: sample.yaml
l4/l4_e1/src/: main.c
l4/l4_e1_sol/: sample.yaml
l4/l4_e1_sol/src/: main.c
l4/l4_e2/: sample.yaml
l4/l4_e2/src/: main.c
l4/l4_e2_sol/: sample.yaml
l4/l4_e2_sol/src/: main.c
l4/l4_e3/: sample.yaml
l4/l4_e3_sol/: sample.yaml
l5/l5_e1/: sample.yaml
l5/l5_e1_sol/: CMakeLists.txt  sample.yaml
l5/l5_e1_sol/src/: main.c
l6/l6_e1/: sample.yaml
l6/l6_e1/boards/: CHANGE_TO_YOUR_BUILD_TARGET_NAME.overlay
l6/l6_e1_sol/: sample.yaml
l6/l6_e2/: CMakeLists.txt  sample.yaml
l6/l6_e2_sol/: sample.yaml
l7/l7_e1/: sample.yaml
l7/l7_e1_sol/: prj.conf  sample.yaml
l7/l7_e2/: prj.conf  sample.yaml
l7/l7_e2_sol/: CMakeLists.txt  sample.yaml
l7/l7_e3/: sample.yaml
l7/l7_e3_sol/: sample.yaml
l8/l8_e1/: sample.yaml
l8/l8_e1_sol/: sample.yaml
l8/l8_e2/: sample.yaml
l8/l8_e2_sol/: sample.yaml
v1.9.1-v1.6.0/l6/l6_e2/: CMakeLists.txt
v1.9.1-v1.6.0/l6/l6_e2/boards/: thingy53_nrf5340_cpuapp_ns.overlay.bak
(+208 files in other folders)
